# ASC_ODE_BLA

./: .gitignore  .gitmodules  CMakeLists copy.txt  CMakeLists.txt  Dockerfile  README.md  bind.cc  build-pyodide-wheel.yml  jupyter-lite.json  jupyter_lite_config.json  main.cc  meta.yaml  pyproject.toml  setup.cfg
.github/workflows/: build-pyodide-wheel.yml  test_push.yml
Elements/: Beam.cc  Beam.h  CMakeLists.txt  Connector.cc  Connector.h  Spring.cc  Spring.h  rigid_body.cc  rigid_body.h
api/contents/: all.json
api/contents/pypi/: all.json
build_debug_old/: CMakeCache.txt  Makefile  cmake_install.cmake  main
build_debug_old/Elements/: Makefile  cmake_install.cmake
build_debug_old/helper/: Makefile  cmake_install.cmake
build_debug_old/nonlinfunc/: Makefile  cmake_install.cmake
build_debug_old/src/: Makefile  cmake_install.cmake  main_src
extensions/@jupyterlite/pyodide-kernel-extension/static/: 128.cb82559482664768a01e.js  128.cb82559482664768a01e.js.map
extensions/@jupyterlite/pyodide-kernel-extension/static/pypi/: ipykernel-6.9.2-py3-none-any.whl  piplite-0.3.0a0-py3-none-any.whl  pyodide_kernel-0.3.0a0-py3-none-any.whl  widgetsnbextension-4.0.10-py3-none-any.whl
helper/: CMakeLists.txt  helper.cc  helper.h
nonlinfunc/: CMakeLists.txt  Newton.cc  Newton.h  autodiff_new.h  nonlinfunc.cc  nonlinfunc.h
py_test/: data_pendulum.ipynb  rbFET_debug.py  rbFET_release.py  test.ipynb
src/: CMakeLists.txt  equation_rb.cc  equation_rb.h  equation_rbs.cc  equation_rbs.h  main.cc  rigid_body.cc  rigid_body.h  rigid_body_system copy.h  rigid_body_system.cc  rigid_body_system.h
static/pyodide/extensions/@jupyterlite/pyodide-kernel-extension/static/pypi/: widgetsnbextension-3.6.6-py3-none-any.whl
static/pyodide/extensions/webgui_jupyter_widgets/static/: 367.5dbfc159bba55fa297c7.js
static/pyodide/files/pypi/: lib_rigid_body-0.0.1-cp312-cp312-pyodide_2024_0_wasm32.whl
static/pyodide/static/pyodide/: pyodide-lock.json
