[build-system]
requires = [
  "scikit-build-core>=0.14.0",
  "setuptools>=61.0",
  "wheel",
  "pybind11",
]
build-backend = "scikit_build_core.build_api"

[project]
name = "asc_ode_bla"
version = "0.1.0"
description = "ASC ODE BLA pybind11 C++ extension"
requires-python = ">=3.8"

[tool.scikit-build-core]
cmake.minimum-version = "3.18"
build-dir = "build-dir"
wheel.packages = []
wheel.py-api = "cp312"
minimum-version = "0.14"
