[metadata]
name = asc_ode_bla
version = 0.1.0
description = ASC ODE BLA pybind11 bindings packaged for Pyodide
author = Your Name
author_email = you@example.com
license = MIT

[options]
# leave packages empty for pure CMake extension packaging; scikit-build-core will handle extension
python_requires = >=3.8

[tool.scikit-build-core]
# Optional: tell scikit-build-core to use Ninja and Release by default
generator = "Ninja"
build_type = "Release"

# If your CMakeLists expects variables, pass them here:
# cmake-args = -DFOO=ON;-DBAR=OFF
# Example: if your CMake uses -DBUILD_WASM, don't force here; pyodide build sets up env
